# jot

./: .gitignore  .prettierrc.json  App.tsx  CLAUDE.md  LICENSE  README.md  TODO  app.config.js  app.json  eas.json  eslint.config.mjs  jest.config.js  lint-staged.config.mjs  metro.config.js  package.json  pnpm-lock.yaml  turbo.json  vitest.config.mjs
.github/workflows/: ci.yml  deploy-web-app.yml  release-desktop.yml  release-macos.yml  release.yml
.husky/: pre-commit
__mocks__/: expo-file-system.js
apps/app/: App.tsx  app.config.js  eas-build-pre-install.sh  eas.json  eslint.config.mjs  index.ts  jest.config.js  lint-staged.config.mjs  metro.config.js  package.json  tsconfig.json  webpack.config.js
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/llm/: inference.rs  mod.rs
apps/desktop/src-tauri/src/stt/: engine.rs  mod.rs
apps/server/: .gitignore  README.md  eslint.config.mjs  install.ps1  install.sh  jest.config.js  (+2 more)
docs/: README.md  ai.md  architecture.md  data.md  model-management.md  monetization.md  product-principles.md  product.md  react-patterns.md  rich-text-editor.md  roadmap.md  search.md  security.md  ux.md
patches/: @dr.pogodin__react-native-static-server@0.26.2.patch  react-native-enriched@0.1.6.patch  react-native-executorch@0.5.15.patch
scripts/: createMigration.ts  deploy-desktop.sh  deploy-server.sh  downloadModels.ts  testMigrations.ts
(+596 files in other folders)
